--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "@ngxs/store": "^3.3.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "immer": "^5.0.0",
     "rxjs": "~6.5.3",
     "zone.js": "~0.9.1"
   },
@@ -32,6 +34,9 @@
     "@angular/cli": "~8.3.18",
     "@angular/compiler-cli": "~8.2.13",
     "@angular/language-service": "~8.2.13",
+    "@ngxs/devtools-plugin": "^3.5.1",
+    "@ngxs/logger-plugin": "^3.5.1",
+    "@ngxs/schematics": "^0.0.1-alpha.5",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
